# asrkit

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  cloud-e2e.yml  cloud-runtime.yml  e2e.yml  release.yml
docs/: adapter-spec.md  asrbench-blueprint.md  embedding-and-distribution.md  engines-and-addressing.md  hardening-0.1.0.md  lifecycle-audit.md  model-management.md  openai-compatibility.md  product-form.md  project-overview.md  result-contract.md  roadmap-cli-completeness.md  roadmap.md  usage.md
docs/archive/: README.md  expert-review-2026-07.md  hardening-0.1.0.md  lifecycle-audit.md  roadmap-cli-completeness.md
docs/archive/superpowers/plans/: 2026-07-07-w1-batch-input-and-result-contract.md  2026-07-07-w2-cloud-retry-and-download-override.md  2026-07-07-w3a-contract-fulfillment.md  2026-07-07-w3b1-discovery.md  2026-07-07-w3b2-completion.md  2026-07-07-w3b3-doctor.md  2026-07-08-longrun-robustness.md  2026-07-08-w4-streaming.md  README.md
docs/archive/superpowers/specs/: 2026-07-07-w1-batch-input-and-result-contract-design.md  2026-07-07-w2-cloud-retry-and-download-override-design.md  2026-07-07-w3a-contract-fulfillment-design.md  2026-07-07-w3b1-discovery-design.md  2026-07-07-w3b2-completion-design.md  2026-07-08-mic-streaming-design.md  2026-07-08-streaming-endpoints-design.md  2026-07-08-w4-streaming-design.md  README.md
docs/superpowers/plans/: 2026-07-07-w1-batch-input-and-result-contract.md  2026-07-07-w2-cloud-retry-and-download-override.md  2026-07-07-w3b1-discovery.md  2026-07-07-w3b2-completion.md
docs/superpowers/specs/: 2026-07-07-w1-batch-input-and-result-contract-design.md  2026-07-07-w2-cloud-retry-and-download-override-design.md  2026-07-07-w3a-contract-fulfillment-design.md  2026-07-07-w3b1-discovery-design.md  2026-07-07-w3b2-completion-design.md  2026-07-07-w3b3-doctor-design.md  2026-07-08-engine-rm-design.md  2026-07-08-longrun-robustness-design.md  2026-07-08-mic-streaming-design.md  2026-07-08-serve-streaming-design.md  2026-07-08-sherpa-prefix-design.md  2026-07-08-streaming-endpoints-design.md  2026-07-08-verbose-logging-design.md  2026-07-08-w4-streaming-design.md
e2e/: sdk_stub_server.py  test_cloud_providers.py  test_openai_python_sdk.py  test_real.py
e2e/fixtures/: README.md
e2e/openai-node/: contract.mjs  package-lock.json  package.json
packaging/: audit_artifacts.py
packaging/cloud/: README.md  asrkit-cloud.spec  bootstrap.py  build.py  entrypoint.py  smoke-linux-container.sh  smoke.py
packaging/cloud/hooks/: hook-uvicorn.py
src/asrkit/: __init__.py  _adapter_manager.py  _http.py  api.py  audio.py  capabilities.py  cli.py  cloud_cli.py  completion.py  config.py  doctor.py  emit.py  engines.py  formats.py  inputs.py  log.py  mic.py  registry.py  server.py  store.py  types.py  usermodels.py
src/asrkit/adapters/: __init__.py  cloud_dashscope.py  cloud_doubao.py  cloud_elevenlabs.py  cloud_openai.py  local_faster_whisper.py  local_sherpa.py  local_transformers.py  local_whispercpp.py  models_local.py
src/asrkit/cli_commands/: __init__.py  config.py  diagnostics.py  engines.py  models.py  parser.py  shared.py  stream.py  transcribe.py
src/asrkit/daemon/: __init__.py  cli.py  lifecycle.py  security.py  settings.py
src/asrkit/profiles/: __init__.py  cloud.py  full.py
tests/: test_adapter_manager.py  test_artifact_audit.py  test_batch.py  test_capabilities.py  test_cli_split.py  test_cloud_format.py  test_cloud_packaging.py  test_cloud_retry.py  test_cloud_runtime.py  test_completion.py  test_config.py  test_daemon.py  test_discover.py  test_doctor.py  test_doubao_poll.py  test_e2e.py  test_e2e_contract.py  test_engine_rm.py  test_formats.py  test_http.py  test_inputs.py  test_logging.py  test_mic.py  test_model_cache.py  test_model_links.py  test_segments.py  test_serve.py  test_smoke.py  test_store_safety.py  test_streaming.py  test_thin_kernel.py  test_workflow_contracts.py
