[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asrkit"
version = "0.2.0"
description = "One interface to run and compare any speech-to-text model — local & cloud."
readme = "README.en.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "ASRKit" }]
keywords = ["asr", "speech-to-text", "stt", "speech-recognition", "whisper", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 基础安装即含全部接口所需（本地引擎 sherpa-onnx + 云端 HTTP + 音频读取）。
# `pip install asrkit` 一步到位；模型权重用 `asrkit pull` 下载，云端填 API key。
dependencies = [
    "sherpa-onnx>=1.13.3",   # 本地端侧引擎
    "numpy",                 # 采样点
    "soundfile",             # 读音频
    "soxr",                  # 重采样（--convert 时）
    "requests",              # 云端 HTTP
]

[project.optional-dependencies]
# 可选引擎（默认只带 sherpa-onnx；其余按需装，见 docs/engines-and-addressing.md §八）
faster-whisper = ["faster-whisper"]
transformers = ["transformers", "torch"]
engines = ["faster-whisper", "transformers", "torch"]
# 兼容旧命令（0.1.x 曾用 asrkit[all]/[local]/[cloud]）；基础安装已含核心，这些为空别名。
all = []
local = []
cloud = []

[project.scripts]
asrkit = "asrkit.cli:main"

[project.urls]
Homepage = "https://github.com/asrkit/asrkit"
Repository = "https://github.com/asrkit/asrkit"

[tool.hatch.build.targets.wheel]
packages = ["src/asrkit"]
