[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asrkit"
dynamic = ["version"]
description = "One interface to run and compare any speech-to-text model — local & cloud."
readme = "README.en.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "ASRKit" }]
keywords = ["asr", "speech-to-text", "stt", "speech-recognition", "whisper", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 定位：ASRKit 是**接口**——引擎可插拔、模型可插拔、云端内置（代码/依赖极小）。
# 基础安装 = 接口层 + 云端（只需 HTTP）。极小、秒装、随处可跑（含 asrkit serve 的调用方）。
# 本地引擎按需加 extra；模型权重用 `asrkit pull` 下载；云端填 API key。
dependencies = [
    "requests",              # 云端 HTTP（云端内置，依赖仅此一个）
]

[project.optional-dependencies]
# —— 本地引擎（可插拔；sherpa/whispercpp 需音频 io，faster-whisper/transformers 自带解码）——
sherpa = ["sherpa-onnx>=1.13.3", "numpy", "soundfile", "soxr"]   # 默认端侧引擎（47 模型）
whispercpp = ["pywhispercpp", "numpy", "soundfile", "soxr"]
faster-whisper = ["faster-whisper"]
transformers = ["transformers", "torch"]
mic = ["sounddevice", "numpy"]             # 麦克风实时输入:asrkit stream --mic
# —— 组合别名 ——
local = ["asrkit[sherpa]"]                 # “本地默认体验” = sherpa
engines = ["asrkit[sherpa]", "asrkit[whispercpp]", "asrkit[faster-whisper]", "asrkit[transformers]"]
# —— 本地 OpenAI 兼容服务：asrkit serve ——
serve = ["fastapi", "uvicorn", "python-multipart"]
# —— 全家桶 ——
all = ["asrkit[engines]", "asrkit[serve]"]
# 云端内置，无需 extra；保留空别名兼容旧命令
cloud = []
# —— 开发 / CI 工具（lint + 类型 + 测试 + serve 测试所需 httpx）——
dev = ["ruff", "mypy", "pytest", "pytest-cov", "httpx"]

[project.scripts]
asrkit = "asrkit.cli:main"

[project.urls]
Homepage = "https://github.com/asrkit/asrkit"
Repository = "https://github.com/asrkit/asrkit"

[tool.hatch.version]
path = "src/asrkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/asrkit"]

# —— lint（ruff）——
# 高价值低摩擦：pyflakes(F,真·死代码/bug) + pycodestyle(E/W)。忽略 E501（行长）：
# 模型表等处刻意用长行更易读。不上 I/UP/B（会引入大量纯风格改写 churn）。
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

# —— 类型（mypy）——
# 宽松起步：只做基本类型检查，不强制全量注解（disallow-untyped-defs 会炸）。
# 可选引擎（sherpa/torch/fastapi…）未装，故 ignore_missing_imports。
[tool.mypy]
files = ["src/asrkit"]
ignore_missing_imports = true

# —— 测试（pytest）——
[tool.pytest.ini_options]
testpaths = ["tests"]
# src-layout：普通 pytest 也必须命中当前工作树，不能回落到 site-packages 的旧版本。
pythonpath = ["src"]
addopts = "-q"
